@@ -2,6 +2,16 @@
 
 	From stable:
 
+	2001-10-25  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procdialogs.c: Pass the kill signal to the root password dialog
+	so the proper action is taken as root. Also many minor cosmetic
+	improvements.
+
+2001-11-10  Kevin Vandersloot <kfv101@psu.edu>
+
+	From stable:
+
 	2001-10-19  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.c: add the Ximian gtop icon as default window
